--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
+    "serverless-http": "^4.0.0",
     "solarlunar": "^2.0.7"
   }
 }
