--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,12 @@
     "api/*.js": {
       "runtime": "@vercel/node@2.0.0"
     }
-  }
+  },
+
+    "crons": [
+    {
+      "path": "/api/payment/charge-billing",
+      "schedule": "0 9 * * *"  
+    }
+  ]
 }
