--- a/vercel.json
+++ b/vercel.json
@@ -7,8 +7,8 @@
 
   "crons": [
     {
-      "path": "/api/payment/manage-subscription?action=process_scheduled",
-      "schedule": "*/1 * * * *"
+      "path": "/api/payment/apply-scheduled-changes",
+      "schedule": "*/10 * * * *"
     },
     {
       "path": "/api/payment/manage-subscription?action=charge",
