--- a/vercel.json
+++ b/vercel.json
@@ -6,15 +6,10 @@
   },
 
   "crons": [
-  
-     
-    {
-      "path": "/api/payment/manage-subscription?action=charge",
-      "schedule": "0 0 * * *"
-    },
-    { "path": "/api/payment/manage-subscription?action=autoCancel", 
-      "schedule": "5 3 * * *"
-    } 
+    { "path": "/api/payment/manage-subscription?action=charge&attempt=1", "schedule": "0 0 * * *" }, 
+    { "path": "/api/payment/manage-subscription?action=charge&attempt=2", "schedule": "0 1 * * *" },  
+    { "path": "/api/payment/manage-subscription?action=charge&attempt=3", "schedule": "0 2 * * *" },  
+    { "path": "/api/payment/manage-subscription?action=autoCancel",       "schedule": "5 3 * * *" }   
   ],
     "headers": [
     {
